2001-06-21  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/grub.texi: Update the location of the CVS repository
	[/home/cvs -> /cvsroot/grub].
	* README: Likewise.
	
2001-06-19  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/boot.c (load_image): If the image is a Multiboot ELF OS
	image, get the physical entry address, when a loaded memory
	segment contains it. And, set ENTRY_ADDR to it, after printing
	out the virtual one. Suggested by Rogelio M. Serrano Jr.
	<rogelio@victorio.com>.
	
2001-05-30  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/grub.texi: Fix some typos. Reported by Florian Hatat
	<mininet@wanadoo.fr>.
	
2001-05-29  Pavel Roskin  <proski@gnu.org>

	* configure.in (AC_OUTPUT): Remove debian/Makefile.

2001-05-28  Gordon Matzigkeit  <gord@fig.org>

	* Makefile.am (SUBDIRS): Remove reference to debian directory.
	Packaging is no longer done by the GRUB team.

2001-05-03  Gordon Matzigkeit  <gord@fig.org>

	* stage1/stage1.S (nt_magic): Explicitly reserve space for the NT
	magic number.

2001-05-25  Klaus Reichl  <Klaus.Reichl@alcatel.at>

	* stage2/stage2.c (print_entries_raw): New function.
	(run_menu): Use it to implement menu & command-list if on dumb
	terminals.  
	Changes are:
	  Adjust FIRST_ENTRY only on non-dumb terminals.
	  Setting of SHOW_MENU is honoured also on dumb
	    terminals. 
	  Likely if SHOW_MENU is false, ESC brings her to the
	    menu - not to the command-line as before.
	  PRINT_BORDER, GOTOXY, SET_LINE_xxx are only called if
	    not on dumb terminals.
	  Show entry number when timeout is running if terminal is dumb.
	  Prompt with entry number when waiting for keys.

2001-05-14  Pavel Roskin  <proski@gnu.org>

	* stage2/shared.h (ENTRY): Remove unnecessary `##'.

2001-05-03  Jochen Hoenicke  <jochen@gnu.org>

	* grub/asmstub.c (biosdisk): Work around a bug in linux's ez
	remapping.  Problem reported by Ben Byer <bbyer@rice.edu>.
	
2001-03-28  Gordon Matzigkeit  <gord@fig.org>
